[gd_scene load_steps=2 format=3 uid="uid://bx2tx5kjeh62w"]

[ext_resource type="Script" path="res://addons/inventorytool/scripts/list_inventory_manager.gd" id="1_wfyn6"]

[node name="List Inventory Manager" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wfyn6")

[node name="nodesController" type="PanelContainer" parent="."]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="nodesController"]
layout_mode = 2

[node name="Label" type="Label" parent="nodesController/VBoxContainer"]
layout_mode = 2
text = "Detach for better usage
"

[node name="HSeparator" type="HSeparator" parent="."]
layout_mode = 2

[node name="ListInventoryEditor" type="PanelContainer" parent="."]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="ListInventoryEditor"]
layout_mode = 2

[node name="InventorySetup" type="VBoxContainer" parent="ListInventoryEditor/PanelContainer"]
layout_mode = 2

[node name="Slot Amount" type="VBoxContainer" parent="ListInventoryEditor/PanelContainer/InventorySetup"]
layout_mode = 2

[node name="Amount" type="Label" parent="ListInventoryEditor/PanelContainer/InventorySetup/Slot Amount"]
layout_mode = 2
text = "Quantidade de slots"

[node name="Spinbox" type="SpinBox" parent="ListInventoryEditor/PanelContainer/InventorySetup/Slot Amount"]
unique_name_in_owner = true
layout_mode = 2
min_value = 1.0
max_value = 1000.0
value = 1.0
rounded = true

[node name="HSeparator" type="HSeparator" parent="ListInventoryEditor/PanelContainer/InventorySetup"]
layout_mode = 2

[node name="ScrollTab" type="VBoxContainer" parent="ListInventoryEditor/PanelContainer/InventorySetup"]
layout_mode = 2
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="ListInventoryEditor/PanelContainer/InventorySetup/ScrollTab"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 360)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="inventorySlots" type="VBoxContainer" parent="ListInventoryEditor/PanelContainer/InventorySetup/ScrollTab/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PanelContainer" type="PanelContainer" parent="ListInventoryEditor/PanelContainer/InventorySetup/ScrollTab/ScrollContainer/inventorySlots"]
layout_mode = 2

[node name="listSlot" type="VBoxContainer" parent="ListInventoryEditor/PanelContainer/InventorySetup/ScrollTab/ScrollContainer/inventorySlots/PanelContainer"]
layout_mode = 2

[node name="item" type="PanelContainer" parent="ListInventoryEditor/PanelContainer/InventorySetup/ScrollTab/ScrollContainer/inventorySlots/PanelContainer/listSlot"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="ListInventoryEditor/PanelContainer/InventorySetup/ScrollTab/ScrollContainer/inventorySlots/PanelContainer/listSlot/item"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="ListInventoryEditor/PanelContainer/InventorySetup/ScrollTab/ScrollContainer/inventorySlots/PanelContainer/listSlot/item/MarginContainer"]
visible = false
layout_mode = 2

[node name="iconPlaceHolder" type="ColorRect" parent="ListInventoryEditor/PanelContainer/InventorySetup/ScrollTab/ScrollContainer/inventorySlots/PanelContainer/listSlot/item/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2

[node name="itemName" type="Label" parent="ListInventoryEditor/PanelContainer/InventorySetup/ScrollTab/ScrollContainer/inventorySlots/PanelContainer/listSlot/item/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "Nome do item
"

[node name="VSeparator" type="VSeparator" parent="ListInventoryEditor/PanelContainer/InventorySetup/ScrollTab/ScrollContainer/inventorySlots/PanelContainer/listSlot/item/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="itemAmount" type="Label" parent="ListInventoryEditor/PanelContainer/InventorySetup/ScrollTab/ScrollContainer/inventorySlots/PanelContainer/listSlot/item/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "quantidade de item no inventário
"

[node name="VSeparator2" type="VSeparator" parent="ListInventoryEditor/PanelContainer/InventorySetup/ScrollTab/ScrollContainer/inventorySlots/PanelContainer/listSlot/item/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="testBtn" type="Button" parent="ListInventoryEditor/PanelContainer/InventorySetup/ScrollTab/ScrollContainer/inventorySlots/PanelContainer/listSlot/item/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "Botão de ação"

[node name="HSeparator" type="HSeparator" parent="ListInventoryEditor/PanelContainer/InventorySetup/ScrollTab"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="ListInventoryEditor/PanelContainer/InventorySetup"]
layout_mode = 2

[connection signal="value_changed" from="ListInventoryEditor/PanelContainer/InventorySetup/Slot Amount/Spinbox" to="." method="_on_inventoryListSize"]
[connection signal="pressed" from="ListInventoryEditor/PanelContainer/InventorySetup/ScrollTab/ScrollContainer/inventorySlots/PanelContainer/listSlot/item/MarginContainer/HBoxContainer/testBtn" to="." method="_on_inventory_button_pressed"]
